--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Games.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Games.data.br",
-        frameworkUrl: buildUrl + "/Games.framework.js.br",
-        codeUrl: buildUrl + "/Games.wasm.br",
+        dataUrl: buildUrl + "/Games.data",
+        frameworkUrl: buildUrl + "/Games.framework.js",
+        codeUrl: buildUrl + "/Games.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Polar Park TSA",
